--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,17 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment: 
-  sdk: '>=2.17.1 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies: 
   cupertino_icons: ^1.0.2
   iconly: 1.0.1
   get: 4.6.5
+  http: 0.13.4
+  modal_progress_hud_nsn: 0.2.1
+  get_storage: 2.0.3
+  google_fonts: 3.0.1
+  jiffy: 5.0.0
   flutter: 
     sdk: flutter
 
@@ -18,5 +23,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter: 
+  assets: 
+    - images/
   uses-material-design: true
 
